<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ViewAnimator
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/viewAnimator"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            >

            <ImageView
                android:contentDescription="@string/main_restaurant_flip_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/restaurant_image"
                android:src="@drawable/rest1" />

        </ViewAnimator>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_name"
            android:id="@+id/restaurant_name"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_details"
            android:id="@+id/restaurant_description"
            android:layout_gravity="center_horizontal" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars="4"
            android:rating="2"
            android:layout_gravity="center_horizontal" />

</LinearLayout>